# HiRE_generator

./: .gitignore  CMakeLists.txt  README.md  analysis.cpp  analysis.hpp  atom.cpp  atom.hpp  chain.cpp  chain.hpp  coordinates.cpp  coordinates.hpp  fa2cg.cpp  fa2cg.hpp  functions.cpp  functions.h  geometry.cpp  geometry.hpp  main.cpp  main_fa2cg.cpp  molecule.cpp  molecule.hpp  opepFileGenerator  opepFileGeneratorForCG  pdbParser.cpp  pdbParser.hpp  pdbWriter.cpp  pdbWriter.hpp  residue.cpp  residue.hpp  stats.cpp  stats.hpp  vector.cpp  vector.hpp  vector3d.cpp  vector3d.hpp
entities/: CMakeLists.txt  atom.cpp  atom.hpp  chain.cpp  chain.hpp  entity.cpp  entity.h  entitySearchCriteria.cpp  entitySearchCriteria.hpp  molecule.cpp  molecule.hpp  residue.cpp  residue.hpp
geometry/: CMakeLists.txt  analysis.cpp  analysis.hpp  geometry.cpp  geometry.hpp  plane.cpp  plane.hpp  point.cpp  point.hpp  vector3d.cpp  vector3d.hpp  vo3d.cpp  vo3d.hpp
inout/: CMakeLists.txt  opepInputParamWriter.cpp  opepInputParamWriter.h  pdbParser.cpp  pdbParser.hpp  pdbWriter.cpp  pdbWriter.hpp  xtcParser.cpp  xtcParser.hpp
log/: CMakeLists.txt  debug.cpp  debug.hpp
mathematics/: CMakeLists.txt  stats.hpp
param/: CMakeLists.txt  DNAParameters.cpp  DNAParameters.h  RNAParameters.cpp  RNAParameters.h  RNAparam.hpp  chainParameterManager.cpp  chainParameterManager.h  chainParameters.cpp  chainParameters.h  fa2cgParam.cpp  fa2cgParam.hpp  structsParam.h
tests/: make_tests.bash  run_tests.bash
tests/ref/DNA/: parametres.csh  parametres_RNA.top
tests/ref/DNA_RNA/: DNA_RNA.top  (+2 more)
(+8 files in other folders)
